削除済みアクセス可能に
