# docs/openapi.yaml
@@ -206,6 +206,33 @@ paths:
                 $ref: '#/components/schemas/Error500'
       security:
         - bearerAuth: []
+  /tanzaku/{projectId}:
+    get:
+      operationId: getTanzaku
+      tags:
+        - Tanzaku
+      summary: Get Tanzaku
+      description: Get a tanzaku by project ID
+      parameters:
+        - name: projectId
+          in: path
+          required: true
+          description: ID of the project to get
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Project found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TanzakuSchemaArray'
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Error500'
 
   /tanzaku/del/{tanzakuId}:
     delete:
